STRETCH: Create magazine form - create form for magazine subscription - create magazine-sub-form element with input and button - style button and element content - update README.md on progress

--- a/index.html
+++ b/index.html
@@ -77,8 +77,13 @@
       <div class="walk-img">
         <img src="img/space-walk.png" alt="Space walking astronaut">
       </div>
-
     </section>
+
+    <div class="magazine-sub-form">
+      <h3>Signup for our Newsletters</h3>
+      <input type="text" name="email" placeholder="enter your email">
+      <button>Send me Newsletters</button>
+    </div>
 
     <footer>
       <p>Copyright SpaceWalkers 2018</p>
